Added placeholder assets and created a title screen

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,17 @@
             body {
                 background-color: black;
             }
+
+            @font-face {
+                font-family: "Brady Bunch Remastered";
+                src: url('/assets/fonts/BradyBunchRemastered.eot'); /* IE9 Compat Modes */
+                src: url('/assets/fonts/BradyBunchRemastered.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+                     url('/assets/fonts/BradyBunchRemastered.woff2') format('woff2'), /* Super Modern Browsers */
+                     url('/assets/fonts/BradyBunchRemastered.woff') format('woff'), /* Pretty Modern Browsers */
+                     url('/assets/fonts/BradyBunchRemastered.ttf')  format('truetype'), /* Safari, Android, iOS */
+                     url('/assets/fonts/BradyBunchRemastered.svg#svgFontName') format('svg'); /* Legacy iOS */
+
+            }
         </style>
         <script type="module" src="/js/main.js"></script>
     </head>
